# Logic to combine 2 operations into 1 action

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,10 @@ AllCops:
     - 'lib/**/*.rb'
     - 'Rakefile'
   NewCops: enable
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
